--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,8 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <!--Google Fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Anton|Quicksand|Shadows+Into+Light+Two" rel="stylesheet">
+
 
     <meta charset="UTF-8">
     <title>Bootstrap-Portfolio</title>
@@ -25,7 +27,7 @@
     <!--Header & Nav Links-->
 
     <nav class="navbar navbar-light bg-light">
-        <span class="navbar-brand mb-0 h1">Navbar</span>
+        <span class="navbar-brand mb-0 h1">Jacqueline Demers</span>
         <ul class="nav justify-content-end">
             <li class="nav-item">
                 <a class="nav-link active" href="#">About</a>
@@ -39,7 +41,7 @@
 
         </ul>
     </nav>
-
+    <div id="wrapper">
     <!--Container-->
     <div class="container">
         <div class="row">
@@ -49,29 +51,30 @@
         </div>
     </div>
     <!--Email-->
-        <form>
+        <form class="form">
                 <div class="form-group row">
     
                   <label for="colFormLabelSm" class="col-sm-2 col-form-label col-form-label-sm">Name:</label>
                   <div class="col-sm-10">
-                    <input type="email" class="form-control form-control-sm" id="colFormLabelSm" placeholder="col-form-label-sm">
+                    <input type="email" class="form-control form-control-sm" id="colFormLabelSm" placeholder="type here">
                   </div>
                 </div>
                 <div class="form-group row">
                   <label for="colFormLabel" class="col-sm-2 col-form-label">Email:</label>
                   <div class="col-sm-10">
-                    <input type="email" class="form-control" id="colFormLabel" placeholder="col-form-label">
+                    <input type="email" class="form-control" id="colFormLabel" placeholder="type here">
                   </div>
                 </div>
                 <div class="form-group row">
                   <label for="colFormLabelLg" class="col-sm-2 col-form-label col-form-label-lg">Mesage:</label>
                   <div class="col-sm-10">
-                    <input type="email" class="form-control form-control-lg" id="colFormLabelLg" placeholder="col-form-label-lg">
+                    <input type="email" class="form-control form-control-lg" id="colFormLabelLg" placeholder="type here">
                   </div>
                 
                 </div>
               <button class="btn btn-primary" type="submit">Submit form</button>
               </form>
+              </div>
 
 </body>
 </html>
