--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <!--Google Fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Anton|Quicksand|Shadows+Into+Light+Two" rel="stylesheet">
+
 
     <meta charset="UTF-8">
     <title>Bootstrap-Portfolio</title>
@@ -25,7 +27,7 @@
     <!--Header & Nav Links-->
 
     <nav class="navbar navbar-light bg-light">
-        <span class="navbar-brand mb-0 h1">Navbar</span>
+        <span class="navbar-brand mb-0 h1">Jacqueline Demers</span>
         <ul class="nav justify-content-end">
             <li class="nav-item">
                 <a class="nav-link active" href="#">About</a>
@@ -41,6 +43,7 @@
     </nav>
 
     <!--Container-->
+    <div class="wrapper">
     <div class="container">
         <!--Row 1-->
         <div class="row">
@@ -51,8 +54,8 @@
         <!--Row 2-->
         <div class="row">
             <div class="col-3">
-                <img src="assets/images/biopic.jpg" alt="..." class="img-thumbnail">
-            </div>
+                <img src="assets/images/biopic.jpg" style="width:150px;height:200px;" alt="Jacqueline Demers" id="biopic">
+                </div>
             <div class="col-5">
                 <p>Write all about me here</p>
             </div>
@@ -63,7 +66,6 @@
         <div class="card">
             <div class="card-body">
                 <h5 class="card-title">Card title</h5>
-                <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 <a href="#" class="card-link">Card link</a>
                 <a href="#" class="card-link">Another link</a>
@@ -71,8 +73,9 @@
         </div>
     </div>
     </div>
+    </div>
 
-    <button class="btn btn-primary" type="submit">Submit form</button>
+
 
 
 
