--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <!--Google Fonts-->
-    <link href="https://fonts.googleapis.com/css?family=Anton|Quicksand|Shadows+Into+Light+Two" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Anton|Quicksand|Shadows+Into+Light+Two|Amatic+SC" rel="stylesheet">
 
 
     <meta charset="UTF-8">
@@ -43,7 +43,7 @@
     </nav>
 
     <!--Container-->
-    <div class="wrapper">
+    <div id="wrapper">
     <div class="container">
         <!--Row 1-->
         <div class="row">
