--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <!--Google Fonts-->
-    <link href="https://fonts.googleapis.com/css?family=Anton|Quicksand|Shadows+Into+Light+Two" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Anton|Quicksand|Shadows+Into+Light+Two|Amatic+SC" rel="stylesheet">
 
 
     <meta charset="UTF-8">
@@ -46,7 +46,8 @@
     <div class="container">
         <div class="row">
             <div class="col-3">
-                <h1>Contact</h1>
+                <h1><strong>Contact</strong></h1>
+
             </div>
         </div>
     </div>
