--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <!--Google Fonts-->
-    <link href="https://fonts.googleapis.com/css?family=Anton|Quicksand|Shadows+Into+Light+Two" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Anton|Quicksand|Shadows+Into+Light+Two|Amatic+SC" rel="stylesheet">
 
 
     <meta charset="UTF-8">
@@ -47,7 +47,7 @@
         <section class="portfolio">
             <h1><strong>Portfolio</strong></h1>
         
-    
+
     <!--Row 1-->
     <div class="row">
         <div class="col-4">
