--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <!--Google Fonts-->
     <link href="https://fonts.googleapis.com/css?family=Anton|Quicksand|Shadows+Into+Light+Two|Amatic+SC" rel="stylesheet">
-
+    <!--Responsive-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <meta charset="UTF-8">
     <title>Bootstrap-Portfolio</title>
@@ -30,13 +31,13 @@
         <span class="navbar-brand mb-0 h1">Jacqueline Demers</span>
         <ul class="nav justify-content-end">
             <li class="nav-item">
-                <a class="nav-link active" href="#">About</a>
+                <a class="nav-link active" href="index.html">About</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Portfolio</a>
+                <a class="nav-link" href="portfolio.html">Portfolio</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
+                <a class="nav-link" href="contact.html">Contact</a>
             </li>
 
         </ul>
@@ -45,9 +46,9 @@
     <!--Container-->
     <div class="container">
         <div class="row">
-            <div class="col-3">
+            <div class="col-12">
                 <h1><strong>Contact</strong></h1>
-
+                <hr/>
             </div>
         </div>
     </div>
