--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <!--Google Fonts-->
     <link href="https://fonts.googleapis.com/css?family=Anton|Quicksand|Shadows+Into+Light+Two|Amatic+SC" rel="stylesheet">
+    <!--Responsive-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
     <meta charset="UTF-8">
@@ -30,13 +32,13 @@
         <span class="navbar-brand mb-0 h1">Jacqueline Demers</span>
         <ul class="nav justify-content-end">
             <li class="nav-item">
-                <a class="nav-link active" href="#">About</a>
+                <a class="nav-link active" href="index.html">About</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Portfolio</a>
+                <a class="nav-link" href="portfolio.html">Portfolio</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
+                <a class="nav-link" href="contact.html">Contact</a>
             </li>
 
         </ul>
@@ -48,8 +50,9 @@
         <!--Row 1-->
         <div class="row">
             <div class="col-8">
-                <div = class="page-header">
+                <div class="page-header">
                 <h1>About Me</h1>
+                <hr/>
             </div>
         <!--Row 2-->
         <div class="row">
@@ -57,7 +60,7 @@
                 <img src="assets/images/biopic.jpg" style="width:150px;height:200px;" alt="Jacqueline Demers" id="biopic">
                 </div>
             <div class="col-5">
-                <p>Write all about me here</p>
+                <p class="p">My name is Jacqueline Demers, I was born and raised in Orlando, FL. I started my journey at Stetson University in graphic arts. A year later i decided to change my career path and I switched over to Hospitality Management! My goal was to eventually get into Event Planning aftr getting my AA in Hospitality Management however, those plans changed as well. For the past 5 years I have started several small businesses. With these business I have had to use my graphic design background to make logos, flyers, t-shirts & so many other things that come along with advertising and marketing your business. I have always been interested in getting back to my roots in digital arts and this web course is going to be exciting & new for me!</p>
             </div>
         </div>
     </div>
