fixed the bootstrap css to overide my css

--- a/contact.html
+++ b/contact.html
@@ -54,20 +54,20 @@
     </div>
     <!--Email-->
         <form class="form">
-                <div class="form-group row">
+                <div class="form-group" row="10">
     
                   <label for="colFormLabelSm" class="col-sm-2 col-form-label col-form-label-sm">Name:</label>
                   <div class="col-sm-10">
                     <input type="email" class="form-control form-control-sm" id="colFormLabelSm" placeholder="type here">
                   </div>
                 </div>
-                <div class="form-group row">
+                <div class="form-group" row="10">
                   <label for="colFormLabel" class="col-sm-2 col-form-label">Email:</label>
                   <div class="col-sm-10">
                     <input type="email" class="form-control" id="colFormLabel" placeholder="type here">
                   </div>
                 </div>
-                <div class="form-group row">
+                <div class="form-group" row="10">
                   <label for="colFormLabelLg" class="col-sm-2 col-form-label col-form-label-lg">Mesage:</label>
                   <div class="col-sm-10">
                     <input type="email" class="form-control form-control-lg" id="colFormLabelLg" placeholder="type here">
@@ -78,5 +78,10 @@
               </form>
               </div>
 
+              <!--Footer-->
+<div class="footer">
+        <p>My Sticky Footer!</p>
+    </div>
+    
 </body>
 </html>
