--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--Reset-->
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-    <!--CSS Reference-->
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <!--CSS Reference-->
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <!--Google Fonts-->
     <link href="https://fonts.googleapis.com/css?family=Anton|Quicksand|Shadows+Into+Light+Two|Amatic+SC" rel="stylesheet">
     <!--Responsive-->
@@ -79,7 +79,10 @@
     </div>
 
 
-
+<!--Footer-->
+<div class="footer">
+        <p>My Sticky Footer!</p>
+    </div>
 
 
 </body>
