correcting sytle directories

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <title>About | Jacqueline Demers</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--Reset-->
-    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="assets/CSS/reset.css">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <!--CSS Reference-->
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/CSS/style.css">
     <!--Google Fonts-->
     <link href="https://fonts.googleapis.com/css?family=Anton|Quicksand|Shadows+Into+Light+Two|Amatic+SC" rel="stylesheet">
     <!--Responsive-->
@@ -26,7 +26,7 @@
 </head>
 
 <body>
-    <!--Header & Nav Links-->
+    <!--Header & Nav-Links-->
 
     <nav class="navbar navbar-light bg-light">
         <span class="navbar-brand mb-0 h1">Jacqueline Demers</span>
@@ -46,41 +46,50 @@
 
     <!--Container-->
     <div id="wrapper">
-    <div class="container">
-        <!--Row 1-->
-        <div class="row">
-            <div class="col-8">
-                <div class="page-header">
-                <h1>About Me</h1>
-                <hr/>
-            </div>
-        <!--Row 2-->
-        <div class="row">
-            <div class="col-3">
-                <img src="assets/images/biopic.jpg" style="width:150px;height:200px;" alt="Jacqueline Demers" id="biopic">
+        <div class="container">
+            <!--Row 1-->
+            <div class="row">
+                <div class="col-lg-8">
+                    <div class="page-header">
+                        <h1><strong>About Me</strong></h1>
+                        <hr/>
+                    </div>
                 </div>
-            <div class="col-5">
-                <p class="p">My name is Jacqueline Demers, I was born and raised in Orlando, FL. I started my journey at Stetson University in graphic arts. A year later i decided to change my career path and I switched over to Hospitality Management! My goal was to eventually get into Event Planning aftr getting my AA in Hospitality Management however, those plans changed as well. For the past 5 years I have started several small businesses. With these business I have had to use my graphic design background to make logos, flyers, t-shirts & so many other things that come along with advertising and marketing your business. I have always been interested in getting back to my roots in digital arts and this web course is going to be exciting & new for me!</p>
+            </div>
+            <!--Row 2-->
+            <div class="row">
+                <div class="col-6 col-md-3">
+                    <img src="assets/images/biopic.jpg" style="width:200px;height:250px;" alt="Jacqueline Demers" id="biopic">
+                </div>
+                <div class="col- 12 col-md-5">
+                    <p class="p">My name is Jacqueline Demers, I was born and raised in Orlando, FL. I started my journey at Stetson University
+                        in graphic arts. A year later i decided to change my career path and I switched over to Hospitality
+                        Management! My goal was to eventually get into Event Planning after getting my AA in Hospitality
+                        Management however, those plans changed as well. For the past 5 years I have started several small
+                        businesses. With these business I have had to use my graphic design background to make logos, flyers,
+                        t-shirts & so many other things that come along with advertising and marketing your business. I have
+                        always been interested in getting back to my roots in digital arts and this web course is going to
+                        be exciting & new for me!</p>
+                </div>
+
+                <!--Row 3-->
+                <div class="col-12 col-md-4">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title"><strong>Card title</strong></h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <a href="#" class="card-link">Card link</a>
+                            <a href="#" class="card-link">Another link</a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-    <!--Row 3-->
-    <div class="col-4">
-        <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="card-link">Card link</a>
-                <a href="#" class="card-link">Another link</a>
-            </div>
-        </div>
-    </div>
-    </div>
-    </div>
 
 
-<!--Footer-->
-<div class="footer">
+    <!--Footer-->
+    <div class="footer">
         <p>My Sticky Footer!</p>
     </div>
 
