--- a/contact.html
+++ b/contact.html
@@ -7,11 +7,11 @@
     <title>Contact | Jacqueline Demers</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--Reset-->
-    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-    <!--CSS Reference-->
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/CSS/reset.css">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <!--CSS Reference-->
+    <link rel="stylesheet" type="text/css" href="assets/CSS/style.css">
     <!--Google Fonts-->
     <link href="https://fonts.googleapis.com/css?family=Anton|Quicksand|Shadows+Into+Light+Two|Amatic+SC" rel="stylesheet">
     <!--Responsive-->
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-    <!--Header & Nav Links-->
+    <!--Header & Nav-Links-->
 
     <nav class="navbar navbar-light bg-light">
         <span class="navbar-brand mb-0 h1">Jacqueline Demers</span>
